--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     font-weight: 300;
     cursor: default;
+    user-select: none;
 }
 main {
     height: 100vh;
@@ -20,7 +21,7 @@ main {
     width: 35%;
     padding: 13px;
     background-color: rgb(0, 0, 0);
-    border-radius: 5px;
+    border-radius: 20px;
     display: grid;
     grid-template-columns: 23.5% 23.5% 23.5% 23.5%;
     grid-template-rows: 15.333% 15.333% 15.333% 15.333% 15.333%;
@@ -72,6 +73,7 @@ main {
     justify-content: flex-end;
     padding: 25px;
     height: 100%;
+    overflow: hidden;
 }
 .output-numbers {
     font-size: 70px;
